[project]
name = "openhound-faker"
version = "0.0.1"
description = "An extension for OpenHound to generate synthetic data for testing and development purposes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.5.1",
]
authors = [
  {name = "jdreijer@specterops.io", email = "jdreijer@specterops.io"}
]

license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/d3vzer0/openhound-faker"
Issues = "https://github.com/d3vzer0/openhound-faker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"extension.yaml" = "openhound_faker/extension.yaml"

[dependency-groups]
dev = [
    "openhound",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "griffe>=1.15.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.1",
]

[project.entry-points."openhound.sources"]
faker = "openhound_faker.main:app"
